<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">哇塞宝贝</string>
    <string name="action_settings">Settings</string>
    <string name="txthome">首页</string>
    <string name="product">商品</string>
    <string name="guide">攻略</string>
    <string name="txttype">分类</string>
    <string name="txtme">我</string>
    <string name="guideList">导购列表</string>
    <string name="topicList">专题列表</string>
    <string name="focusList">哇点列表</string>
    <string name="guideDetail">导购详情</string>
    <string name="comment">评论</string>
    <string name="selectedGuide">精选攻略</string>
    <string name="selectedItem">精选商品</string>
    <string name="topic">专题</string>
    <string name="focus">哇点</string>
	<string name="showAll">显示全部</string>
    <string name="hint_input_comment">说点什么…</string>
	<string name="menu_action_send">发送</string>
    <string name="menu_action_send1">发表</string>
	<string name="hint_nickname">昵称:</string>
	<string name="signout">退出</string>
	<string name="dialog_title_share">分享到</string>
	<string name="share_platform_sina_weibo">新浪微博</string>
    <string name="share_platform_tencent_qq">QQ好友</string>
    <string name="share_platform_tencent_qzone">QQ空间</string>
    <string name="share_platform_wechat">微信好友</string>
    <string name="share_platform_wechat_timeline">朋友圈</string>
    <string name="open_in_browser">浏览器打开</string>
    <string name="dialog_cancel">取消</string>
    <string name="productDetail">商品详情</string>
    <string name="storeDetail">店铺详情</string>
    <string name="store">店铺优惠</string>
    <string name="activityDetail">活动详情</string>
	<string name="txtregiste">注册</string>
	<string name="txtlogin">登录</string>
	<string name="txtmob">手机号码</string>
	<string name="txtpwd">密码</string>
	<string name="txtforgetpwd">忘记密码</string>
	<string name="txtusesocialid">使用社交账号登陆</string>
	<string name="login_notification">未登录</string>
	<string name="txtregistetip1">请确保您的手机开通，以保证注册顺利进行</string>
	<string name="txtregistetip2">请输入手机号码</string>
	<string name="txtregistegetsms">获取验证码短信</string>
	<string name="txtsmstip1">填写验证码</string>
	<string name="txtsmstip2">验证码已发送到xxxxxxxxxxx，请查收</string>
	<string name="txtsmswritesms">请输入验证码</string>
	<string name="txtregistenext">下一步</string>
	<string name="txtpwdsettip1">设置密码</string>
	<string name="txtpwdsettip2">请设置您的密码</string>
	<string name="txtpwdsettip3">显示密码</string>
	<string name="txtpwdsetok">完成</string>	
	<string name="txtforgetpwdtip1">忘记密码</string>
	<string name="txtforgetpwdtip2">请确保您的手机开通，以保证找回密码顺利进行</string>
	<string name="txtforgetpwdtip3">请输入手机号</string>
	<string name="txtforgetpwdget">获取验证码短信</string>	
	<string name="txtresetpwdtip1">重新设置密码</string>
	<string name="txtresetpwdtip2">请重置您的密码</string>
	<string name="txtresetpwdtip3">显示密码</string>	
	<string name="txtsharetip">分享到</string>	
	<string name="txtsharewxpyq">微信朋友圈</string>	
	<string name="txtsharewxhy">微信好友</string>	
	<string name="txtsharexlwb">新浪微博</string>	
	<string name="txtshareqqkj">QQ空间</string>	
	<string name="txtshareqqhy">QQ好友</string>	
	<string name="txtuserinfo">用户信息</string>	
	<string name="txtexitlogin">退出登录</string>	
	<string name="txtnotlogin">未登陆</string>	
	<string name="EXIT_APP">再按一次退出哇塞</string>
	<string name="text_data_loading">数据加载中，请稍后</string>
	<string name="holder_note_network_error">网络好像不给力哦</string>
	<string name="txtsharecancel">取消</string>
	<string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">更新</string>
    <string name="soft_update_updatebtn">确认</string>
    <string name="soft_update_later">取消</string>
    <string name="soft_updating">正在更新，请稍等...</string>
    <string name="soft_update_cancel">取消</string>
    <string name="button_update_now">现在更新</string>
    <string name="button_update_later">以后再说</string>
    <string name="favorite_guides_container_empty">您喜欢的攻略放在这儿</string>
    <string name="favorite_items_container_empty">您喜欢的商品放在这儿</string>
    <string name="favorite_guides">收藏的攻略</string>
    <string name="favorite_items">收藏的商品</string>
    <string name="refresh">重新加载</string>
    <string name="loading">玩命加载中...</string>
    <string name="more">更多</string>
    <string name="about">关于</string>
    <string name="about_contact_email">support@91wasai.com</string>
    <string name="about_company_name">深圳市哇塞宝贝网络科技有限公司</string>
    <string name="more_action_about">关于哇塞宝贝</string>
    <string name="setting_contact">联系客服</string>
    <string name="more_action_share_app">邀请好友</string>
    <string name="setting_question">常见问题</string>
    <string name="more_action_feedback">意见反馈</string>
    <string name="more_action_contribute">返利新手学堂</string>
    <string name="more_action_push_service">接受消息推送</string>
    <string name="more_action_check_for_update">版本更新</string>
    <string name="setting_comment">请赐予我好评吧</string>
    <string name="more_action_clear_cache">清除缓存</string>
    <string name="i_want_contribute">我要投稿</string>
    <string name="feedback">意见反馈</string>
    <string name="version_info">版本信息</string>
    <string name="copyright_domain">Copyright © 2015 91wasai.com</string>
    <string name="copyright">All Rights Reserved.</string>
    <string name="contribute_content">灰常感谢亲爱的前来投稿，请将稿件内容发送至 support@91wasai.com 吧。让我们一起将更多的宝贝带给辣妈们，么么哒，爱你哦~</string>
    <string name="feedback_content">灰常感谢亲爱的为我们提出宝贵的意见，请将您的意见内容发送至 support@91wasai.com 吧。让我们一起完善哇塞宝贝吧，么么哒，爱你哦~</string>
    <string name="save">保存</string>
    <string name="buttonupdatenow2">升级到最新版本</string>
    
        <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more1">加载中</string>
    
    <string name="please_select">关注范围</string>
    <string name="article">文章</string>
    <string name="all">全部</string>
    <string name="guides_container_empty">内容待更新，别的栏目更多精彩内容哦。</string>
    <string name="products_empty">内容待更新，别的栏目更多精彩内容哦。</string>
    <string name="ataobao_products_empty">使出了吃奶的力气也没有找到~T_T~</string>
    <string name="search_guides_empty">搜索导购文章结果为空。</string>
    <string name="search_products_empty">搜索商品结果为空。</string>
    <string name="store_empty">内容待更新，别的栏目更多精彩内容哦。</string>
    <string name="evaluationDetail">评测详情</string>
    <string name="toBuy">进入购买</string>
    <string name="finish">确  定</string>
    <string name="complete">完  成</string>
    <string name="downloading">自动更新中...</string>
    <string name="toMain">进入哇塞</string>
    <string name="strategy_detail">攻略详情</string>
    <string name="article_detail">文章详情</string>
    <string name="search_text">搜索</string>
    <string name="input_search_keyword">请输入关键词</string>
    <string name="integral_explain">活动最终解释权归哇塞宝贝所有</string>
    <string name="rebate_load">即将前往</string>
    <string name="rebate_msg">提醒亲们：先登录哇塞宝贝，才能获取返利哦！</string>
    <string name="rebate_load_pay">先付款</string>
    <string name="rebate_load_after_pay">购买后</string>
    <string name="useable_money">我有</string>
    <string name="total_rebate_label">累计节省</string>
    <string name="will_rebate_label">近期将存入</string>
    <string name="unit">元</string>
    <string name="unit_ic">￥</string>
    <string name="go_use">去使用</string>
    <string name="my_shopping_car">我的淘宝购物车</string>
    <string name="my_orders">我的返利订单</string>
    <string name="my_favorites">我喜欢的</string>
    <string name="my_favorites_desc">收藏过的攻略、商品</string>
    <string name="my_points">我的积分</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_points_desc">有积分奖励哦！</string>
    <string name="push_msg">推送信息</string>
    <string name="setting_more">更多</string>
    <string name="setting_more_desc">常见问题、写建议、评分、设置等</string>
    <!--<string name="super_curr_rebate">今日超级返利</string>-->
    <string name="super_curr_rebate">天天特价</string>
    <string name="where_is_my_order">已经下单了，我的返利在哪里？</string>
    <string name="please_select_platform">请选择你下单的商城</string>
    <string name="confirm_goods">确认收货</string>
    <string name="have_no_data">没有任何记录！</string>
    <string name="remain_time">剩余时间</string>
    <string name="title_activity_find_order">FindOrderActivity</string>

    <string name="find_order_desc">提交完相关信息后，我们客服人员会在1-5个工作日内与您取得联系并核对相关信息，帮助您找回返利订单</string>
    <string name="takingOutDetail">支出详情</string>
    <string name="help_center">常见问题</string>
    <string name="help_course">拿返利小助手</string>

    <string name="search_hint_str">来搜索返利商品吧</string>
    <string name="search_hint_of_guide">靠谱育儿攻略戳这里哦</string>
    <string name="search_hint_of_product">精选行货放心买啦</string>

    <string name="duihuan_hint_jfb">由于淘宝限制,每次最多只能提取50000个集分宝</string>
    <string name="duihuan_hint_alipay">由于淘宝限制,每次最多只能提取500元</string>
    <string-array name="spinnername">
        <item>淘宝网</item>
        <item>天    猫</item>
    </string-array>
</resources>
