<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/upgrade_dialog_shape"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/newVerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/soft_update_title"
        android:textColor="@color/text_major"
        android:textSize="18sp" />

    <include layout="@layout/hr_action_item_group" />

    <TextView
        android:id="@+id/updateContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:textColor="@color/littleblack"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdateLater"
            style="@style/btnStyleNor"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/button_update_later"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonUpdateNow"
            style="@style/btnStyleSel"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/button_update_now"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>