<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.seastar.wasai.views.extendedcomponent.PullToRefreshStaggeredGridView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pull_refresh_grid"
        app:ptrHeaderTextColor="@color/gray"
        app:ptrDrawable="@drawable/refresh_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:cacheColorHint="#00000000"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:gravity="fill"
        app:column_count="2"
        app:item_margin="8dp"
        ptr:ptrMode="both" />

    <com.seastar.wasai.views.extendedcomponent.SimpleMessageView
        android:id="@+id/container_error"
        app:image="@drawable/ic_holder_network_error"
        app:message="@string/holder_note_network_error"
        android:layout_width="fill_parent"
        android:layout_marginTop="-45.0dip"
        android:layout_height="fill_parent"
        android:background="@color/window_background"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/empty_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background"
        android:gravity="center"
        android:text="@string/products_empty"
        android:textColor="#ffa0a0a0"
        android:textSize="16.0sp"
        android:visibility="gone" />

    <com.seastar.wasai.views.extendedcomponent.LoadMessageView
        android:id="@+id/container_load"
        app:message="@string/loading"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/window_background" />


</FrameLayout>

