<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/pull_refresh_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:cacheColorHint="@color/transparent"
        android:divider="@color/border"
        android:dividerHeight="0.5dp"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:listSelector="@color/transparent"
        android:smoothScrollbar="true"
        app:ptrDrawable="@drawable/refresh_icon"
        app:ptrHeaderTextColor="@color/gray" />

    <com.seastar.wasai.views.extendedcomponent.SimpleMessageView
        android:id="@+id/container_error"
        app:image="@drawable/ic_holder_network_error"
        app:message="@string/holder_note_network_error"
        android:layout_marginTop="-45.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/window_background"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/empty_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background"
        android:gravity="center"
        android:text="@string/products_empty"
        android:textColor="#ffa0a0a0"
        android:textSize="16.0sp"
        android:visibility="gone" />

    <com.seastar.wasai.views.extendedcomponent.LoadMessageView
        android:id="@+id/container_load"
        app:message="@string/loading"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/window_background" />


</FrameLayout>

