<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/window_background"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height" >

        <LinearLayout
            android:id="@+id/titleBar"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/abc_action_bar_default_height"
            android:background="@color/titlebackground"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/page_title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="@string/store"
                android:textColor="@color/ivory"
                android:textSize="16sp" />
        </LinearLayout>

        <include layout="@layout/menu_back" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/pull_refresh_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="@color/transparent"
            android:divider="@null"
            android:dividerHeight="4dp"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:listSelector="@color/transparent"
            app:ptrHeaderTextColor="@color/gray"
            app:ptrDrawable="@drawable/refresh_icon"
            android:smoothScrollbar="true" />

        <com.seastar.wasai.views.extendedcomponent.SimpleMessageView
            android:id="@+id/container_error"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/window_background"
            android:visibility="invisible"
            app:image="@drawable/ic_holder_network_error"
            app:message="@string/holder_note_network_error" />
        <com.seastar.wasai.views.extendedcomponent.EmptyMessageView
            android:id="@+id/container_empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="60dp"
            android:background="@color/window_background"
            android:visibility="invisible"
            app:message="@string/store_empty" />
        <com.seastar.wasai.views.extendedcomponent.LoadMessageView
            android:id="@+id/container_load"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/window_background"
            app:message="@string/loading" />
    </FrameLayout>

</LinearLayout>