<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background">

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height"
        android:layout_alignParentTop="true"
        android:background="@color/titlebackground"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/goodslayoutleft"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <include layout="@layout/menu_back" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/goodslayoutcenter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtlogin"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/txtlogin"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/goodslayoutright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtregiste"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/txtregiste"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayoutmid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="@dimen/abc_action_bar_default_height"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_mob"
            style="@style/edtstyle"
            android:layout_marginTop="@dimen/abc_action_bar_default_height"
            android:hint="@string/txtmob"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_password"
            style="@style/edtstyle"
            android:hint="@string/txtpwd"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/btnStyleNor"
            android:text="@string/txtlogin" />

        <TextView
            android:id="@+id/txtforgetpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="10dp"
            android:text="@string/txtforgetpwd"
            android:textColor="@color/input_hint"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/txtusesocialid"
            android:textColor="@color/input_hint"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sina" />

            <ImageView
                android:id="@+id/qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/qq" />

            <ImageView
                android:id="@+id/weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/weixin" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>